@@ -381,7 +381,7 @@ class TestInterRepositoryProviderAdapter(TestCase):
 class TestInterVersionedFileProviderAdapter(TestCase):
     """A group of tests that test the InterVersionedFile test adapter."""
 
-    def test_adapted_tests(self):
+    def test_scenarios(self):
         # check that constructor parameters are passed through to the adapted
         # test.
         from bzrlib.tests.interversionedfile_implementations \
@@ -409,12 +409,11 @@ class TestInterVersionedFileProviderAdapter(TestCase):
 class TestRevisionStoreProviderAdapter(TestCase):
     """A group of tests that test the RevisionStore test adapter."""
 
-    def test_adapted_tests(self):
+    def test_scenarios(self):
         # check that constructor parameters are passed through to the adapted
         # test.
-        from bzrlib.store.revision import RevisionStoreTestProviderAdapter
-        input_test = TestRevisionStoreProviderAdapter(
-            "test_adapted_tests")
+        from bzrlib.tests.revisionstore_implementations \
+            import RevisionStoreTestProviderAdapter
         # revision stores need a store factory - i.e. RevisionKnit
         #, a readonly and rw transport 
         # transport servers:
@@ -422,15 +421,16 @@ class TestRevisionStoreProviderAdapter(TestCase):
         server2 = "b"
         store_factories = ["c", "d"]
         adapter = RevisionStoreTestProviderAdapter(server1, server2, store_factories)
-        suite = adapter.adapt(input_test)
-        tests = list(iter(suite))
-        self.assertEqual(2, len(tests))
-        self.assertEqual(tests[0].store_factory, store_factories[0][0])
-        self.assertEqual(tests[0].transport_server, server1)
-        self.assertEqual(tests[0].transport_readonly_server, server2)
-        self.assertEqual(tests[1].store_factory, store_factories[1][0])
-        self.assertEqual(tests[1].transport_server, server1)
-        self.assertEqual(tests[1].transport_readonly_server, server2)
+        self.assertEqual([
+            ('c',
+             {'store_factory': 'c',
+              'transport_readonly_server': 'b',
+              'transport_server': 'a'}),
+            ('d',
+             {'store_factory': 'd',
+              'transport_readonly_server': 'b',
+              'transport_server': 'a'})],
+            adapter.scenarios)
 
 
 class TestWorkingTreeProviderAdapter(TestCase):
